--- a/node/auth/public/index.html
+++ b/node/auth/public/index.html
@@ -18,8 +18,7 @@
             <input 
                 type="button" 
                 value="get selectQuery" 
-                onclick='document.targetURL.location.href="/selectQuery?userid"
-                +document.userForm.id.value'
+                onclick='document.targetURL.location.href="/selectQuery?userid"+document.userForm.id.value'
             />&nbsp;&nbsp;
         </form>
         <hr />
