--- a/node/auth/public/index.html
+++ b/node/auth/public/index.html
@@ -7,7 +7,7 @@
     <body>
         <h3>User Authentication</h3>
         <hr />
-        <form name="userForm">
+        <form action="/insert" name="userForm" method="post">
             <p>Userid : <input type="text" size="15" name="id" /></p>
             <p>password : <input type="password" size="15" name="pw" /></p>
             <input 
@@ -20,6 +20,7 @@
                 value="get selectQuery" 
                 onclick='document.targetURL.location.href="/selectQuery?userid"+document.userForm.id.value'
             />&nbsp;&nbsp;
+            <input type="submit" value="사용자 추가" />
         </form>
         <hr />
         <iframe
