--- a/node/auth/public/error.html
+++ b/node/auth/public/error.html
@@ -4,12 +4,15 @@
 <head>
     <meta charset="utf-8" />
     <title>Login Failed</title>
+    <link type="text/css" rel="stylesheet" href="mystyle.css" />
 </head>
 
 <body>
+    <div class="box" style="text-align: center;">
     <h3>Login Failed</h3>
-    <h4>로그인에 실패하셨습니다.</h4>
-    <a href="index.html">다시 시도하기</a>
+    <h4 style="color: crimson">로그인에 실패하셨습니다.</h4>
+    <a href="index.html" style="text-decoration: none">다시 시도하기</a>
+    </div>
 </body>
 
 </html>
