--- a/node/auth/public/member.html
+++ b/node/auth/public/member.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="utf-8" />
     <title>User Authentication</title>
+    <link type="text/css" rel="stylesheet" href="mystyle.css" />
 </head>
 
 <body>
     <h3>User Authentication</h3>
     <hr />
     <form action="/insert" target="targetURL" name="userForm" method="post">
-        <p>Userid : <input type="text" size="15" name="id" /></p>
+        <p>Userid &nbsp;&nbsp;: <input style="background-color: bisque;" type="text" size="15" name="id" /></p>
         <p>Password : <input type="password" size="15" name="pw" /></p>
         <input type="button" value="get select" onclick='document.targetURL.location.href="/select"' />&nbsp;&nbsp;
         <input type="button" value="get selectQuery"
