--- a/node/auth/public/register.html
+++ b/node/auth/public/register.html
@@ -3,16 +3,19 @@
 <head>
     <meta charset="utf-8" />
     <title>Register</title>
+    <link type="text/css" rel="stylesheet" href="mystyle.css" />
 </head>
 
 <body>
     <h3>Register</h3>
     <hr />
     <form action="/register" name="userForm" method="post">
-        <p>Userid : <input type="text" size="15" name="id" /></p>
-        <p>Password : <input type="password" size="15" name="pw" /></p>
-        <input type="submit" value="회원가입" />&nbsp;&nbsp;
-        <input type="reset" value="취소" />
+        <div class="box" style="text-align: center;">
+        <p>Userid &nbsp;&nbsp;: <input style="background-color: beige" type="text" size="15" name="id" /></p>
+        <p>Password : <input style="background-color: beige"type="password" size="15" name="pw" /></p>
+        <input style="margin-bottom: 15px;" type="submit" value="회원가입" />&nbsp;&nbsp;
+        <input style="margin-bottom: 15px;" type="reset" value="취소" />
+        </div>
     </form>
 </body>
 
