register_null_error

--- a/node/auth/public/register.html
+++ b/node/auth/public/register.html
@@ -15,6 +15,9 @@
         <p>Password : <input style="background-color: beige"type="password" size="15" name="pw" /></p>
         <input style="margin-bottom: 15px;" type="submit" value="회원가입" />&nbsp;&nbsp;
         <input style="margin-bottom: 15px;" type="reset" value="취소" />
+        <p>
+            <a href="/" style="text-decoration: none">로그인</a>
+        </p>
         </div>
     </form>
 </body>
