--- a/node/auth/public/main.html
+++ b/node/auth/public/main.html
@@ -10,7 +10,7 @@
 <body>
     <h3>Main Page</h3>
     <hr />
-    <img src="https://tecoble.techcourse.co.kr/static/715b91aab894cf4240578d9b4ec613b8/b9fcf/linux-distribution.png" />
+    <img src="https://as1.ftcdn.net/v2/jpg/04/25/98/08/1000_F_425980896_clSeceUUzgIeBLxHFDCVc1QkITTnclf4.jpg" />
 </body>
 
 </html>
