--- a/node/auth/public/main.html
+++ b/node/auth/public/main.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <meta charset="utf-8" />
     <title>Main Page</title>
     <link type="text/css" rel="stylesheet" href="mystyle.css" />
-</head>
-
-<body>
+  </head>
+  <body>
     <h3>Main Page</h3>
     <hr />
-    <img src="https://as1.ftcdn.net/v2/jpg/04/25/98/08/1000_F_425980896_clSeceUUzgIeBLxHFDCVc1QkITTnclf4.jpg" />
-</body>
-
+    <div class="box-inner">
+      <h3>User's Home page~!!</h3>
+      <img
+        src="https://tecoble.techcourse.co.kr/static/715b91aab894cf4240578d9b4ec613b8/b9fcf/linux-distribution.png"
+      />
+    </div>
+  </body>
 </html>
