--- a/node/auth/public/error.html
+++ b/node/auth/public/error.html
@@ -8,10 +8,11 @@
 </head>
 
 <body>
-    <div class="box" style="text-align: center;">
-    <h3>Login Failed</h3>
-    <h4 style="color: crimson">로그인에 실패하셨습니다.</h4>
-    <a href="index.html" style="text-decoration: none">다시 시도하기</a>
+    <div class="noround">
+        <h3 style="margin-left: 0px">Login Failed</h3>
+        <h4 style="text-align: center">로그인에 실패하셨습니다.</h4>
+        <div class="box-inner">
+          <a href="index.html">다시 시도하기</a>
     </div>
 </body>
 
