--- a/node/auth/public/while.html
+++ b/node/auth/public/while.html
@@ -8,18 +8,24 @@
 <h3>while 문으로 달력 출력</h3>
 <hr>
 <script>
-	let n = prompt("원하는 달의 일수를 입력하세요", 0);
-    n = parseInt(n); // 문자열을 숫자로 바꿈
-
-    let i=1, j=0;
-	while(i<=31) {
-		if (i%7 == 5)
-            document.write(<hr />);
-
-		
-        i++;
-	}
-
+	while(1) {
+        let n =prompt("원하는 달의 일수를 입력하세요. (28, 30, 31 중 택일)");
+        n = parseInt(n);
+        if (n==30 || n == 31 || n == 28) {
+            let i = 1;
+            while (i <=n) {
+                if (i < 10)
+                    document.write("&nbsp;&nbsp;" + i + "&nbsp;&nbsp;");
+                else document.write(i + "&nbsp;&nbsp;&nbsp;");
+                if (i % 7 == 0) document.write("<br>");
+                i++;
+            }
+            break;
+        }   else {
+            alert("제대로 입력");
+            continue;
+        }
+    }
 </script>
 </body>
 </html>
