--- a/html/4/ex4-10.html
+++ b/html/4/ex4-10.html
@@ -1,31 +1,21 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>CSS3 색 활용</title>
-<style>
-div {
-	margin-left : 30px; 
-	margin-right : 30px;
-	margin-bottom : 10px;
-	color : white;
-}
-</style>
-</head>
-<body>
-<h3>CSS3 색 활용</h3>
-<hr>
-<div style="background-color:deepskyblue">
-	deepskyblue(#00BFFF)</div>
-<div style="background-color:brown">
-	brown(#A52A2A)</div>
-<div style="background-color:fuchsia">
-	fuchsia(#FF00FF)</div>
-<div style="background-color:darkorange">
-	darkorange(#FF8C00)</div>
-<div style="background-color:#008B8B">
-	darkcyan(#008B8B)</div>
-<div style="background-color:#6B8E23">
-	olivedrab (#6B8E23)</div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>색과 관련된 프로퍼티 활용</title>
+    <style>
+      div {
+        color: blueviolet; /* 글자 blueviolet */
+        background-color: gold; /* 배경 gold */
+        border-color: #6b8e23; /* 테두리 olivedrab(#6B8E23) */
+        width: 150px;
+        border-width: 2px;
+        border-style: solid;
+        margin: 35px;
+      }
+    </style>
+  </head>
+  <body>
+    <div>CSS에서 r, g, b로 구성됩니다.</div>
+  </body>
 </html>
