--- a/html/4/selector.html
+++ b/html/4/selector.html
@@ -1,58 +1,47 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
     <title>셀렉터 만들기</title>
     <style>
-        #list {
-            background: rgb(230, 237, 179);
-        }
-
-        .warning {
-            color: red;
-        }
-
-        body.main {
-            background-color: rgb(155, 232, 235);
-        }
-
-        h3: :first-letter {
-            color: rgb(178, 131, 253);
-        }
-
-        ul strong {
-            color: #33ff88;
-        }
-
-        div>strong {
-            background: yellow;
-            font-size: 18px;
-        }
-
-        div {
-            color: cadetblue;
-        }
-
-        li:hover {
-            background: yellowgreen;
-        }
+      #list {
+        background: rgb(230, 237, 179);
+      }
+      .warning {
+        color: red;
+      }
+      body.main {
+        background-color: mistyrose;
+      }
+      h3:first-letter {
+        color: blue;
+      }
+      ul strong {
+        color: #d640d9;
+      }
+      div > strong {
+        background: yellow;
+        font-size: 18px;
+      }
+      div {
+        color: cadetblue;
+      }
+      li:hover {
+        background: tomato;
+      }
     </style>
-
-</head>
-
-<body class="main">
+  </head>
+  <body class="main">
     <h3>Web Programming</h3>
-    <hr>
+    <hr />
     <div>
-        <div>2학기 <strong>학습 내용</strong></div>
-        <ul>
-            <li>HTML5</li>
-            <li><strong>CSS</strong></li>
-            <li>JAVASCRIPT</li>
-        </ul>
-        <div>60점 이하는 F!</div>
+      <div>2학기 <strong>학습 내용</strong></div>
+      <ul id="list">
+        <li>HTML5</li>
+        <li><strong>CSS</strong></li>
+        <li>JAVASCRIPT</li>
+      </ul>
+      <div class="warning">60점 이하는 F!</div>
     </div>
-</body>
-
+  </body>
 </html>
