--- a/html/7/ex7-02.html
+++ b/html/7/ex7-02.html
@@ -13,9 +13,9 @@
 
 	for(let i=0; i<5; i++) { // 5 대신 plots.length로 해도 됨
 		let size = plots[i]; // plots 배열의 i번째 원소
-		while(size>0) {
-			document.write("*");
-			size--;
+		while(size>0) { //while-loop문: size가 0보다 클때까지 반복
+			document.write("*"); //size의 개수만큼 * 출력
+			size--; // 주어진 size에서 -1이 된 값으로 size 갱신
 		}
 		document.write(plots[i] + "<br>");
 	}
