--- a/html/7/ex7-06.html
+++ b/html/7/ex7-06.html
@@ -9,10 +9,10 @@
 <hr>
 <script>
 	let current = new Date(); // 현재 시간 값을 가진 Date 객체 생성
-	if(current.getSeconds() % 2 == 0)
-		document.body.style.backgroundColor = "violet";
-	else
-		document.body.style.backgroundColor = "lightskyblue";
+	if(current.getSeconds() % 2 == 0) // 페이지 방문시간이 짝수이면
+		document.body.style.backgroundColor = "violet"; //violet
+	else //방문시간이 홀수이면
+		document.body.style.backgroundColor = "lightskyblue"; //lightskyblue
 
 	document.write("현재 시간 : ");
 	document.write(current.getHours(), "시,");
