--- a/html/8/ex8-01.html
+++ b/html/8/ex8-01.html
@@ -10,15 +10,15 @@
 <p id="firstP" style="color:blue; background:yellow" 
 	onclick="this.style.color='teal'">이것은
 	<span style="color:red">문장입니다.</span>
-</p>
+</p> <!-- p: 객체구분-->
 <script>
-	let p = document.getElementById("firstP");
+	let p = document.getElementById("firstP"); // id 값이 firstP인 테그의 DOM 찾기
 	let text = "p.id = " + p.id + "\n";
 	text += "p.tagName = " + p.tagName + "\n";
 	text += "p.innerHTML = " + p.innerHTML + "\n";
 	text += "p.style.color = " + p.style.color + "\n";
 	text += "p.onclick = " + p.onclick + "\n";
-	text += "p.childElementCount = " + p.childElementCount + "\n";
+	text += "p.childElementCount = " + p.childElementCount + "\n"; //childElement = span
 	text += "너비 = " + p.offsetWidth + "\n";
 	text += "높이 = " + p.offsetHeight + "\n";
 	alert(text);
