--- a/html/exam/Quiz_10.html
+++ b/html/exam/Quiz_10.html
@@ -6,7 +6,7 @@
 <script>
 	var state = 1;
 	function change() {
-		state = !state;
+		state = !state; //toggle(토글)
 		let span = document.getElementById("mySpan"); // id가 mySpan인 객체 찾기
 		if (state == 1) {
 			span.style.color = "green"; // 글자 색 green
