miniproject_main.js ('/', '/hello')

--- a/node/miniproj/public/index.html
+++ b/node/miniproj/public/index.html
@@ -27,7 +27,7 @@
         </p>
     </form>
     <hr />
-    <iframe name="targetURL" class="iframe-preview center" width="90%" height="500" style="border: none" src="/Hello">
+    <iframe name="targetURL" class="iframe-preview center" width="90%" height="500" style="border: none" src="/hello">
     </iframe>
 </body>
 </html>
