--- a/node/miniproj/public/index.html
+++ b/node/miniproj/public/index.html
@@ -2,12 +2,20 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>mongoose Example</title>
+    <title>mongoose Index</title>
+    <link type="text/css" rel="stylesheet" href="mystyle.css">
 </head>
+
 <body>
     <h1>mongoose Example</h1>
-    <hr />
-    <form method="post" name="mongoform" target="targetURL">
+    <nav id="menubar">
+        <ul>
+            <li style="float: left;"><a href="index.html">Home</a></li>
+            <li><a href="aboutme.html">About Me</a></li>
+            <li style="float: right;"><a href="login.html">Login</a></li>
+        </ul>
+    </nav>
+    <!--<form method="post" name="mongoform" target="targetURL">
         <input type="button" value="Users Collection" onclick='document.targetURL.location.href="/list"' />
         <p>
             userid <input type="text" size="10" name="userid" />
@@ -25,9 +33,10 @@
             <input type="submit" value="update" onclick='this.form.action="/update"' />
             <input type="submit" value="delete" onclick='this.form.action="/delete"' />
         </p>
-    </form>
-    <hr />
-    <iframe name="targetURL" class="iframe-preview center" width="90%" height="500" style="border: none" src="/Hello">
+    </form>-->
+
+    <iframe name="targetURL" class="iframe-preview center" width="90%" height="500" style="border: none" src="/hello">
     </iframe>
+    <hr />
 </body>
 </html>
