--- a/node/miniproj/public/index.html
+++ b/node/miniproj/public/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>mongoose Index</title>
+    <title>세차장 정보 출력</title>
     <link type="text/css" rel="stylesheet" href="mystyle.css">
 </head>
 
 <body>
-    <h1>mongoose Example</h1>
+    <h1>Carwash</h1>
     <nav id="menubar">
         <ul>
             <li style="float: left;"><a href="index.html">Home</a></li>
@@ -15,27 +15,41 @@
             <li style="float: right;"><a href="login.html">Login</a></li>
         </ul>
     </nav>
-    <!--<form method="post" name="mongoform" target="targetURL">
-        <input type="button" value="Users Collection" onclick='document.targetURL.location.href="/list"' />
+    <form method="post" name="mongoform" target="targetURL">
+        <!-- <input type="button" value="Carwashes list" onclick='document.targetURL.location.href="/carwash_list"' />
         <p>
-            userid <input type="text" size="10" name="userid" />
-            <input type="button" value="get" onclick='document.targetURL.location.href="/get?input="+document.mongoform.userid.value' />
+            state <input type="text" size="10" name="state" />
+            <input type="button" value="get" onclick='document.targetURL.location.href="/carwash_get_state?state="+document.mongoform.state.value' />
         </p>
-        <p>name <input type="text" size="10" name="name" /></p>
+        <p>industry <input type="text" size="10" name="industry" /></p>
         <p>city <input type="text" size="10" name="city" /></p>
-        <p>age <input type="text" size="10" name="age" /></p>
+        <p>age <input type="text" size="10" name="age" /></p> -->
         <p>
-            sex <input type="radio" name="sex" value="male" />male
-            <input type="radio" name="sex" value="female" checked />female
+            시군구명을 선택해주세요.
+                <p><input type="radio" name="송파구" value="songpa" />송파구
+                    <input type="radio" name="서초구" value="seocho" />서초구
+                    <input type="radio" name="강남구" value="gangnam" checked />강남구
+                    <!-- <input type="button" value="find state" onclick='document.targetURL.location.href="/carwash_get_state?state="+document.mongoform.state.value' /> -->
+                </p>
         </p>
+        <hr />
         <p>
-            <input type="submit" value="insert" onclick='this.form.action="/insert"' />
-            <input type="submit" value="update" onclick='this.form.action="/update"' />
+            세차장 타입을 선택해주세요.
+                <p><input type="radio" name="손세차" value="handwash" />손세차
+                    <input type="radio" name="자동세차" value="autowash" />자동세차
+                    <input type="radio" name="손세차+자동세차" value="bothofthem" checked />손세차+자동세차
+                    <!-- <input type="button" value="find type" onclick='document.targetURL.location.href="/carwash_get_type?type="+document.mongoform.type.value' /> -->
+                </p>
+        </p>
+        <hr />
+        <!-- <p>
+            <input type="submit" value="songpa" onclick='this.form.action="/carwash_get_state?state=송파구"' />
+            <input type="submit" value="seocho" onclick='this.form.action="/update"' />
             <input type="submit" value="delete" onclick='this.form.action="/delete"' />
-        </p>
+        </p> -->
     </form>-->
 
-    <iframe name="targetURL" class="iframe-preview center" width="90%" height="500" style="border: none" src="/hello">
+    <iframe name="targetURL" class="iframe-preview center" width="90%" height="500" style="border: none" src="/carwash_list">
     </iframe>
     <hr />
 </body>
